--- a/pom.xml
+++ b/pom.xml
@@ -44,5 +44,13 @@
 		    <version>4.12</version>
 		    <scope>test</scope>
 		</dependency>
+		
+		<dependency>
+		    <groupId>javax.ejb</groupId>
+		    <artifactId>ejb-api</artifactId>
+		    <version>3.0</version>
+		    <scope>provided</scope>
+		</dependency>
+
 	</dependencies>  
 </project>
