--- a/pom.xml
+++ b/pom.xml
@@ -11,31 +11,17 @@
     </build>
     
   	<dependencies>
-  		<dependency>
-    		<groupId>javax.faces</groupId>
-    		<artifactId>jsf-api</artifactId>
-    		<version>2.1</version>
-    		<scope>provided</scope>
+		<dependency>
+		    <groupId>javax</groupId>
+		    <artifactId>javaee-api</artifactId>
+		    <version>7.0</version>
+		    <scope>provided</scope>
 		</dependency>
 		
 		<dependency>
 		    <groupId>org.primefaces</groupId>
 		    <artifactId>primefaces</artifactId>
 		    <version>6.1</version>
-		</dependency>
-		
-		<dependency>
-		    <groupId>javax.servlet.jsp</groupId>
-		    <artifactId>javax.servlet.jsp-api</artifactId>
-		    <version>2.3.1</version>
-		    <scope>provided</scope>
-		</dependency>
-
-		<dependency>
-		    <groupId>org.hibernate</groupId>
-		    <artifactId>hibernate-core</artifactId>
-		    <version>5.2.12.Final</version>
-		    <scope>provided</scope>
 		</dependency>
 
 		<dependency>
@@ -44,13 +30,5 @@
 		    <version>4.12</version>
 		    <scope>test</scope>
 		</dependency>
-		
-		<dependency>
-		    <groupId>javax.ejb</groupId>
-		    <artifactId>ejb-api</artifactId>
-		    <version>3.0</version>
-		    <scope>provided</scope>
-		</dependency>
-
 	</dependencies>  
 </project>
