--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,12 @@
     <build>
         <finalName>${project.artifactId}</finalName>
     </build>
-    
+	
+	<properties>
+    	<maven.compiler.source>1.8</maven.compiler.source>
+    	<maven.compiler.target>1.8</maven.compiler.target>
+  	</properties>
+      
   	<dependencies>
 		<dependency>
 		    <groupId>javax</groupId>
